exports[`Check node reducer FLOWDESIGNER_NODE_ADD add a new node to the node collection with the right type 1`] = `
Object {
  "childrens": Object {
    "id": Object {},
  },
  "in": Object {
    "id": Object {},
  },
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id": Object {
      "data": Object {
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "description": "",
        "label": "",
        "nodeSize": Object {
          "height": undefined,
          "width": undefined,
        },
        "nodeType": undefined,
        "position": Object {
          "x": undefined,
          "y": undefined,
        },
        "properties": Object {},
      },
      "id": "id",
      "type": undefined,
    },
  },
  "out": Object {
    "id": Object {},
  },
  "parents": Object {
    "id": Object {},
  },
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check node reducer FLOWDESIGNER_NODE_ADD properly add a new node to the node collection 1`] = `
Object {
  "childrens": Object {
    "id": Object {},
  },
  "in": Object {
    "id": Object {},
  },
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id": Object {
      "data": Object {
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "description": "",
        "label": "",
        "nodeSize": Object {
          "height": undefined,
          "width": undefined,
        },
        "nodeType": undefined,
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "properties": Object {},
      },
      "id": "id",
      "type": undefined,
    },
  },
  "out": Object {
    "id": Object {},
  },
  "parents": Object {
    "id": Object {},
  },
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check node reducer FLOWDESIGNER_NODE_MOVE update node position 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": true,
        "type": "type1",
      },
      "id": "id1",
      "type": "type1",
    },
    "id2": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 50,
          "y": 50,
        },
        "selected": false,
        "type": "type2",
      },
      "id": "id2",
      "type": "type2",
    },
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check node reducer FLOWDESIGNER_NODE_REMOVE should remove node from node collection 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id2": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": false,
        "type": "type2",
      },
      "id": "id2",
      "type": "type2",
    },
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check node reducer FLOWDESIGNER_NODE_REMOVE_DATA should remove {type} attribute to node data map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": true,
        "type": "type1",
      },
      "id": "id1",
      "type": "type1",
    },
    "id2": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": false,
        "type": "type2",
      },
      "id": "id2",
      "type": "type2",
    },
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check node reducer FLOWDESIGNER_NODE_REMOVE_GRAPHICAL_ATTRIBUTES should remove {selected} attribute to node graphicalAttributes map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "type": "type1",
      },
      "id": "id1",
      "type": "type1",
    },
    "id2": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": false,
        "type": "type2",
      },
      "id": "id2",
      "type": "type2",
    },
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check node reducer FLOWDESIGNER_NODE_SET_DATA should add { type: 'string' } attribute to node data map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id1": Object {
      "data": Object {
        "type": "string",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": true,
        "type": "type1",
      },
      "id": "id1",
      "type": "type1",
    },
    "id2": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": false,
        "type": "type2",
      },
      "id": "id2",
      "type": "type2",
    },
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check node reducer FLOWDESIGNER_NODE_SET_GRAPHICAL_ATTRIBUTES should add { selected: false } attribute to node graphicalAttributes map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": false,
        "type": "type1",
      },
      "id": "id1",
      "type": "type1",
    },
    "id2": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": false,
        "type": "type2",
      },
      "id": "id2",
      "type": "type2",
    },
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check node reducer FLOWDESIGNER_NODE_SET_SIZE update node size property 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "nodeSize": Object {
          "height": 200,
          "width": 200,
        },
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": true,
        "type": "type1",
      },
      "id": "id1",
      "type": "type1",
    },
    "id2": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": false,
        "type": "type2",
      },
      "id": "id2",
      "type": "type2",
    },
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`FLOWDESIGNER_NODE_APPLY_MOVEMENT should apply the same relative movement to each node listed 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "id1": Object {
      "data": Object {
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": NaN,
          "y": NaN,
        },
        "selected": true,
      },
      "id": "id1",
      "type": undefined,
    },
    "id2": Object {
      "data": Object {
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": NaN,
          "y": NaN,
        },
        "selected": false,
      },
      "id": "id2",
      "type": undefined,
    },
    "id3": Object {
      "data": Object {
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "selected": false,
      },
      "id": "id3",
      "type": undefined,
    },
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;
